# solrace

./: .gitignore  Anchor.toml  README.md  package.json
.github/workflows/: cd.yml
app/: package.json
app/@types/: custom.d.ts
app/pages/: _app.tsx  index.tsx
aws/: README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ormconfig.js  package.json  start.sh  tsconfig.json
backend/.ebextensions/: static-files.config
backend/@types/: custom.d.ts
backend/config/: env.js
backend/migration/: 1645689949360-Init.ts  1645690414709-AddMetadaOtionalAttributes.ts  1645693918790-AddUserAndWallet.ts  1645693962001-AddUserNonce.ts  1645696471608-AddUserEmailAndPassword.ts  1645710136851-AddWalletUQPublicAddress.ts  1645718969024-Init.ts  1645719211117-DropMetaDataSymbol.ts  1646110258429-AddNFTAttributesTable.ts  1647267046840-AddCollectionCreator.ts  1647435746758-AddKartTable.ts  1647525071642-AddKartModelAttr.ts  1647528672366-ChangeAttrToFloat.ts  1647531348247-AddGarageTable.ts  1647531691067-AddGarageNullableConstraint.ts
backend/scripts/: create-garage-metadata.ts  create-kart-metadata.ts  create-metadata.ts
frontend/: .env.example  .prettierignore  next.config.js  package-lock.json  package.json  tsconfig.json
programs/candy_machine/: Cargo.toml
programs/candy_machine/src/: lib.rs  utils.rs
programs/faucet/: Cargo.toml
programs/faucet/src/: lib.rs
scripts/: README.md  helper.ts  mint-solr.ts  package.json  utils.ts
tests/: candy_machine.ts  core.test.ts  faucet.test.ts  staking.ts  upgrade.test.ts
(+264 files in other folders)
