[package]
name = "faucet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.22.1"
anchor-spl = "=0.22.1"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
arrayref = "0.3.6"
mpl-token-metadata = { version = "1.1.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
solana-program = "1.8.9"
solana-gateway = "0.1.1"
